fix header spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,7 +122,7 @@ header.main, footer {
 nav {
   float: right;
   width: 80%;
-  padding-left: 10px;
+  padding-left: 7px;
   padding-top: 7px;
 }
 @media only screen and (max-width: 766px) {
@@ -147,7 +147,7 @@ nav ul {
 }
 nav ul li {
   display: inline-block;
-  margin-left: 18px;
+  margin-left: 12px;
   line-height: 1.5;
 }
 @media only screen and (max-width: 766px) {
@@ -213,7 +213,7 @@ nav ul a {
     width: 100%;
     position: relative;
     max-width: 767px;
-    padding-top: 0px;
+    padding-top: 3px;
   }
 }
 
